# shaheen_dev

./: README.md  pyproject.toml  requirements.txt
shaheen_dev/: hooks.py  modules.txt
shaheen_dev/api/: auto_delete.py  download_cert_pdf.py  generate_certificate.py  video_compressor.py  video_converter.py  whatsapp_video_api.py
shaheen_dev/public/css/: video_recorder.css
shaheen_dev/public/js/: download_certificate.js  generate_certificate.js  send_whatsapp_video.js  video_recorder.js
shaheen_dev/shaheen_dev/doctype/shaheen_whatsapp_settings/: shaheen_whatsapp_settings.js  shaheen_whatsapp_settings.json  shaheen_whatsapp_settings.py  test_shaheen_whatsapp_settings.py
shaheen_dev/shaheen_dev/doctype/weekly_student_progress1/: test_weekly_student_progress1.py  weekly_student_progress1.js  weekly_student_progress1.json  weekly_student_progress1.py
shaheen_dev/templates/pages/: video_recorder.html
