[project]
name = "shaheen_dev"
authors = [
    { name = "zaid", email = "zzaidu2018@gmail.com"}
]
description = "This is app for development"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[deploy.dependencies.apt]
packages = [
    "ffmpeg",
    "fpdf",
    "pillow",
    "pdf2image"

]

[tool.poetry.dependencies]
fpdf = "^1.7.2"
pillow = "^9.0.0" 
pdf2image = "^1.16.0"